W2 work (nav focused).

--- a/index.html
+++ b/index.html
@@ -1,17 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>3 Rivers Guide Service</title>
-    <link rel="stylesheet" href="./style.css">
-    <link rel="icon" href="./favicon.ico" type="image/x-icon">
-  </head>
-  <body>
-    <main>
+  
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>3 Rivers Guide Service</title>
+  <meta name="description" content="Welcome to Bountiful Foods, your source for fresh, organic, locally grown foods in Carlsbad, California, and the coastal area from Los Angeles to San Diego. We offer a wide selection of fruits and produce sourced directly from local farmers, as well as national and international suppliers. Visit our storefront or food trucks to enjoy made-to-order fruit drinks and fruit bags. Experience the bounty of organic goodness and convenience while promoting healthy eating.">
+  <link rel="icon" type="image/x-icon" href="images/png/bountiful-foods-website-favicon-color.png">
+  <link href="styles/normalize.css" rel="stylesheet">
+  <link href="styles/small.css" rel="stylesheet">
+  <link href="styles/medium.css" rel="stylesheet">
+  <link href="styles/large.css" rel="stylesheet">
+</head>
+  
+<body>
+  <header>
+    <div class="nav-bar">
+      <div class="nav-container">
+          <div class="brand">
+              <a href="#">3 Rivers Guide Service</a>
+          </div>
+          <nav>
+              <div class="nav-mobile">
+                  <a href="#" id="nav-toggle">
+                      <span></span>
+                  </a>
+              </div>
+              <ul class="nav-list">
+                  <li><a href="#">Home</a></li>
+                  <li><a href="#">About</a></li>
+                  <li><a href="#">Services</a>
+                  <ul class="nav-dropdown">
+                      <li><a href="#">Link 1</a></li>
+                      <li><a href="#">Link 1</a></li>
+                      <li><a href="#">Link 1</a></li>
+                  </ul>
+                  </li>
+                  <li><a href="#">Careers</a></li>
+                  <li><a href="#">Contact</a></li>
+              </ul>
+          </nav>
+      </div>
+  </div>
+  </header>
+
+  <main>
         <h1>3 Rivers Guide Service</h1>  
-    </main>
-	<script src="index.js"></script>
-  </body>
+  </main>
+
+  <footer>
+    <p>&copy;2024 Adam Denning</p>
+  </footer>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+	<script src="scripts\scripts.js"></script>
+
+</body>
+
 </html>
