W3 work (nav rework, footer)

--- a/index.html
+++ b/index.html
@@ -16,44 +16,136 @@
   
 <body>
   <header>
-    <div class="nav-bar">
-      <div class="nav-container">
-          <div class="brand">
-              <a href="#">3 Rivers Guide Service</a>
-          </div>
-          <nav>
-              <div class="nav-mobile">
-                  <a href="#" id="nav-toggle">
-                      <span></span>
-                  </a>
-              </div>
-              <ul class="nav-list">
-                  <li><a href="#">Home</a></li>
-                  <li><a href="#">About</a></li>
-                  <li><a href="#">Services</a>
-                  <ul class="nav-dropdown">
-                      <li><a href="#">Link 1</a></li>
-                      <li><a href="#">Link 1</a></li>
-                      <li><a href="#">Link 1</a></li>
-                  </ul>
-                  </li>
-                  <li><a href="#">Careers</a></li>
-                  <li><a href="#">Contact</a></li>
-              </ul>
-          </nav>
+    <nav class="navbar">
+      <div class="logo">
+        <a href="#"><img src="images/placeholder.png" alt="Logo"><a href="index.html"></a>
       </div>
-  </div>
+      <ul class="nav-links">
+          <li><a href="index.html">Home</a></li>
+          <li><a href="#about">About</a></li>
+          <li><a href="#services">Services</a></li>
+          <li><a href="#gallery">Gallery</a></li>
+      </ul>
+      <div class="burger">
+          <div></div>
+          <div></div>
+          <div></div>
+      </div>
+  </nav>
   </header>
 
   <main>
-        <h1>3 Rivers Guide Service</h1>  
+        <h1>3 Rivers Guide Service</h1>
+        <p>Test 1</p>
+        <p>Test 2</p>
+        <p>Test 3</p>
+        <p>Test 4</p>
+        <p>Test 5</p>
+        <p>Test 6</p>
+        <p>Test 7</p>
+        <p>Test 8</p>
+        <p>Test 9</p>
+        <p>Test 10</p>
+        <p>Test 11</p>
+        <p>Test 12</p>
+        <section id="about"></section>
+        <p>Test 13</p>
+        <p>Test 14</p>
+        <p>Test 15</p>
+        <p>Test 16</p>
+        <p>Test 17</p>
+        <p>Test 18</p>
+        <p>Test 19</p>
+        <p>Test 20</p>
+        <p>Test 21</p>
+        <p>Test 22</p>
+        <p>Test 23</p>
+        <p>Test 24</p>
+        <p>Test 25</p>
+        <p>Test 26</p>
+        <p>Test 27</p>
+        <p>Test 28</p>
+        <p>Test 29</p>
+        <p>Test 30</p>
+        <p>Test 31</p>
+        <p>Test 32</p>
+        <p>Test 33</p>
+        <p>Test 34</p>
+        <p>Test 35</p>
+        <p>Test 36</p>
+        <p>Test 37</p>
+        <p>Test 38</p>
+        <p>Test 39</p>
+        <section id="services"></section>
+        <p>Test 40</p>
+        <p>Test 41</p>
+        <p>Test 42</p>
+        <p>Test 43</p>
+        <p>Test 44</p>
+        <p>Test 45</p>
+        <p>Test 46</p>
+        <p>Test 47</p>
+        <p>Test 48</p>
+        <p>Test 49</p>
+        <p>Test 50</p>
+        <p>Test 51</p>
+        <p>Test 52</p>
+        <p>Test 53</p>
+        <p>Test 54</p>
+        <p>Test 55</p>
+        <p>Test 56</p>
+        <p>Test 57</p>
+        <p>Test 58</p>
+        <p>Test 59</p>
+        <p>Test 60</p>
+        <p>Test 61</p>
+        <p>Test 62</p>
+        <p>Test 63</p>
+        <p>Test 64</p>
+        <p>Test 65</p>
+        <p>Test 66</p>
+        <p>Test 67</p>
+        <p>Test 68</p>
+        <p>Test 69</p>
+        <p>Test 70</p>
+        <p>Test 71</p>
+        <p>Test 72</p>
+        <p>Test 73</p>
+        <p>Test 74</p>
+        <p>Test 75</p>
+        <p>Test 76</p>
+        <p>Test 77</p>
+        <p>Test 78</p>
+        <p>Test 79</p>
+        <section id="gallery"></section>
+        <p>Test 80</p>
+        <p>Test 81</p>
+        <p>Test 82</p>
+        <p>Test 83</p>
+        <p>Test 84</p>
+        <p>Test 85</p>
+        <p>Test 86</p>
+        <p>Test 87</p>
+        <p>Test 88</p>
+        <p>Test 89</p>
+        <p>Test 90</p>
+        <p>Test 91</p>
+        <p>Test 92</p>
+        <p>Test 93</p>
+        <p>Test 94</p>
+        <p>Test 95</p>
+        <p>Test 96</p>
+        <p>Test 97</p>
+        <p>Test 98</p>
+        <p>Test 99</p>
+        <p>Test 100</p>
+
   </main>
 
   <footer>
-    <p>&copy;2024 Adam Denning</p>
+    <p>Tahlequah, OK | &copy;2024 <a href="https://www.linkedin.com/in/adenning2/" target="_blank">Adam Denning</a></p>
   </footer>
 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
 	<script src="scripts\scripts.js"></script>
 
 </body>
