Slight link and footer changes.

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <a href="#"><img src="images/placeholder.png" alt="Logo"><a href="index.html"></a>
       </div>
       <ul class="nav-links">
-          <li><a href="index.html">Home</a></li>
+          <li><a href="#">Home</a></li>
           <li><a href="#about">About</a></li>
           <li><a href="#services">Services</a></li>
           <li><a href="#gallery">Gallery</a></li>
@@ -143,7 +143,7 @@
   </main>
 
   <footer>
-    <p>Tahlequah, OK | &copy;2024 <a href="https://www.linkedin.com/in/adenning2/" target="_blank">Adam Denning</a></p>
+    <p>&copy;2024 3 Rivers Guide Service | Tahlequah, OK | <a href="https://www.linkedin.com/in/adenning2/" target="_blank">Designed by Adam Denning</a></p>
   </footer>
 
 	<script src="scripts\scripts.js"></script>
