--- a/index.html
+++ b/index.html
@@ -7,18 +7,22 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>3 Rivers Guide Service</title>
   <meta name="description" content="Welcome to Bountiful Foods, your source for fresh, organic, locally grown foods in Carlsbad, California, and the coastal area from Los Angeles to San Diego. We offer a wide selection of fruits and produce sourced directly from local farmers, as well as national and international suppliers. Visit our storefront or food trucks to enjoy made-to-order fruit drinks and fruit bags. Experience the bounty of organic goodness and convenience while promoting healthy eating.">
-  <link rel="icon" type="image/x-icon" href="images/png/bountiful-foods-website-favicon-color.png">
+  <link rel="icon" type="image/x-icon" href="images/3-rivers-guide-service-favicon-color.png">
   <link href="styles/normalize.css" rel="stylesheet">
   <link href="styles/small.css" rel="stylesheet">
-  <link href="styles/medium.css" rel="stylesheet">
-  <link href="styles/large.css" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Germania+One&display=swap" rel="stylesheet">
 </head>
   
 <body>
+  <div class="sticky-banner">
+    <p>Book Your Adventure Today! Call us at <a href="tel:405-258-8828">405-258-8828</a></p>
+  </div>
   <header>
     <nav class="navbar">
       <div class="logo">
-        <a href="#"><img src="images/placeholder.png" alt="Logo"><a href="index.html"></a>
+        <a href="#"><img src="images/logo-no-background-black.png" alt="Logo"><a href="index.html"></a>
       </div>
       <ul class="nav-links">
           <li><a href="#">Home</a></li>
@@ -74,7 +78,7 @@
 
 
   <footer>
-    <p>&copy;2024 3 Rivers Guide Service | Tahlequah, OK | <a href="https://www.linkedin.com/in/adenning2/" target="_blank">Designed by Adam Denning</a></p>
+    <p><a href="tel:405-258-8828">Contact: 405-258-8828</a> | &copy;2024 3 Rivers Guide Service | <a href="https://www.linkedin.com/in/adenning2/" target="_blank">Designed by Adam Denning</a></p>
   </footer>
 
 	<script src="scripts\scripts.js"></script>
