--- a/index.html
+++ b/index.html
@@ -40,9 +40,10 @@
 
   <main>
     <section id="home">
-      <h1>River Guides Dedicated to Helping You Catch Fish</h1>
-      <h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</h2>
-      <img src="images/placeholder_fishing_comp.jpg" alt="Description of Home Image" width="500">
+      <div class="hero">
+        <h1>River Guides Dedicated to Helping You Catch Fish</h1>
+        <button><a href="tel:405-258-8828">CALL NOW!</a></button>
+      </div>
     </section>
 
     <section id="services">
