--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
       </div>
       <ul class="nav-links">
           <li><a href="#">Home</a></li>
-          <li><a href="#services">Services</a></li>
-          <li><a href="#about">About</a></li>
+          <li><a href="#territory">Territory</a></li>
+          <li><a href="#pricing">Pricing</a></li>
           <li><a href="#gallery">Gallery</a></li>
       </ul>
       <div class="burger">
@@ -46,22 +46,51 @@
       </div>
     </section>
 
-    <section id="services">
-      <h3>Our Services</h3>
-      <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-      <h4>Services</h4>
+    <section id="about">
+      <h3>WHY CHOOSE US</h3>
+      <p>At 3 Rivers Guide Service, we have lifetimes worth of experience traversing the waters and angling. With a variety of boats, our trips are conducted on what best fits the river/lake. Boat fishing offers the best way to cover the water and find the perfect spots!</p>
+      <img src="images/placeholder_fishing_catch.jpg" alt="Description of About Image"  width="500">
+    </section>
+
+    <section id="territory">
+      <h3>OUR TERRITORY</h3>
+      <img src="images/map.png" alt="issa map"  width="500"><img>
       <ul>
-        <li>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</li>
-        <li>Foot massages.</li>
-        <li>Jones Barbeque lathering and launching.</li>
-        <li>The best dang haircuts on a high speed boat done at midnight.</li>
+        <li>Arkansas River</li>
+        <li>Lake Tenkiller</li>
+        <li>San Gabriel River</li>
+        <li>Blue River</li>
+        <li>Medicine Creek</li>
+        <li>Lake of the Ozarks</li>
+        <li>Lake Tangipahoa</li>
+        <li>Bull Shoals Lake</li>
+        <li>AND MORE!</li>
       </ul>
     </section>
 
-    <section id="about">
-      <h3>About Us</h3>
-      <p>Vitae aliquet nec ullamcorper sit amet. Venenatis urna cursus eget nunc scelerisque viverra mauris. Commodo quis imperdiet massa tincidunt nunc pulvinar sapien. Et malesuada fames ac turpis egestas sed tempus. Condimentum id venenatis a condimentum vitae sapien pellentesque habitant morbi. Lacus laoreet non curabitur gravida arcu ac tortor dignissim convallis. Lobortis feugiat vivamus at augue. Egestas egestas fringilla phasellus faucibus scelerisque eleifend donec pretium. Vitae congue eu consequat ac. Dignissim cras tincidunt lobortis feugiat vivamus. Fringilla est ullamcorper eget nulla facilisi etiam dignissim diam quis.</p>
-      <img src="images/placeholder_fishing_catch.jpg" alt="Description of About Image"  width="500">
+    <section id="pricing">
+      <h3>PRICING</h3>
+      <ul>
+        <li>Half-Day: $500</li>
+        <li>Full-Day: $700</li>
+      </ul>
+      <p>Includes:</p>
+      <ul>
+        <li>Up to 3 people (Bigger groups accomodated, contact us for accurate pricing).</li>
+        <li>Water, drinks, snacks.</li>
+        <li>Lunch (Full-Day only, add to Half-Day for $20/person).</li>
+        <li>Rods, reels, and tackle. Feel free to still bring your own!</li>
+      </ul>
+      <p>Not Included:</p>
+      <ul>
+        <li>Fishing license. Purchase prior to meeting your guide!</li>
+      </ul>
+      <p>Deposit and Cancellation:</p>
+      <ul>
+        <li>1/2 trip cost will be due at booking. The second half is charged on the day of the trip before hitting the water.</li>
+        <li>Deposits will not be refunded within 14 days of the trip.</li>
+        <li>Before 14 days, deposits can be refunded with a $25 cancellation fee.</li>
+      </ul>
     </section>
 
     <section id="gallery">
