--- a/index.html
+++ b/index.html
@@ -48,49 +48,60 @@
 
     <section id="about">
       <h3>WHY CHOOSE US</h3>
-      <p>At 3 Rivers Guide Service, we have lifetimes worth of experience traversing the waters and angling. With a variety of boats, our trips are conducted on what best fits the river/lake. Boat fishing offers the best way to cover the water and find the perfect spots!</p>
-      <img src="images/placeholder_fishing_catch.jpg" alt="Description of About Image"  width="500">
+      <div class="about-container">
+        <img src="images/placeholder_fishing_catch.jpg" alt="Description of About Image"  width="500">
+        <p>At 3 Rivers Guide Service, we have lifetimes worth of experience traversing the waters and angling. With a variety of boats, our trips are conducted on what best fits the river/lake. Boat fishing offers the best way to cover the water and find the perfect spots!</p>
+      </div>
     </section>
 
     <section id="territory">
       <h3>OUR TERRITORY</h3>
-      <img src="images/map.png" alt="issa map"  width="500"><img>
-      <ul>
-        <li>Arkansas River</li>
-        <li>Lake Tenkiller</li>
-        <li>San Gabriel River</li>
-        <li>Blue River</li>
-        <li>Medicine Creek</li>
-        <li>Lake of the Ozarks</li>
-        <li>Lake Tangipahoa</li>
-        <li>Bull Shoals Lake</li>
-        <li>AND MORE!</li>
-      </ul>
+      <div class="territory-container">
+        <ul>
+          <li>Arkansas River</li>
+          <li>Lake Tenkiller</li>
+          <li>San Gabriel River</li>
+          <li>Blue River</li>
+          <li>Medicine Creek</li>
+          <li>Lake of the Ozarks</li>
+          <li>Lake Tangipahoa</li>
+          <li>Bull Shoals Lake</li>
+          <li>AND MORE!</li>
+        </ul>
+        <img src="images/map.png" alt="issa map"  width="500"><img>
+      </div>
     </section>
 
     <section id="pricing">
       <h3>PRICING</h3>
-      <ul>
-        <li>Half-Day: $500</li>
-        <li>Full-Day: $700</li>
-      </ul>
-      <p>Includes:</p>
-      <ul>
-        <li>Up to 3 people (Bigger groups accomodated, contact us for accurate pricing).</li>
-        <li>Water, drinks, snacks.</li>
-        <li>Lunch (Full-Day only, add to Half-Day for $20/person).</li>
-        <li>Rods, reels, and tackle. Feel free to still bring your own!</li>
-      </ul>
-      <p>Not Included:</p>
-      <ul>
-        <li>Fishing license. Purchase prior to meeting your guide!</li>
-      </ul>
-      <p>Deposit and Cancellation:</p>
-      <ul>
-        <li>1/2 trip cost will be due at booking. The second half is charged on the day of the trip before hitting the water.</li>
-        <li>Deposits will not be refunded within 14 days of the trip.</li>
-        <li>Before 14 days, deposits can be refunded with a $25 cancellation fee.</li>
-      </ul>
+      <div class="pricing-container">
+        <div class="pricing-column">
+          <p>Packages:</p>
+          <ul>
+            <li>Half-Day: $500</li>
+            <li>Full-Day: $700</li>
+          </ul>
+          <p>Deposit and Cancellation:</p>
+          <ul>
+            <li>1/2 trip cost will be due at booking. The second half is charged on the day of the trip before hitting the water.</li>
+            <li>Deposits will not be refunded within 14 days of the trip.</li>
+            <li>Before 14 days, deposits can be refunded with a $25 cancellation fee.</li>
+          </ul>
+        </div>
+        <div class="pricing-column">
+          <p>Includes:</p>
+          <ul>
+            <li>Up to 3 people (Bigger groups accomodated, contact us for accurate pricing).</li>
+            <li>Water, drinks, snacks.</li>
+            <li>Lunch (Full-Day only, add to Half-Day for $20/person).</li>
+            <li>Rods, reels, and tackle. Feel free to still bring your own!</li>
+          </ul>
+          <p>Not Included:</p>
+          <ul>
+            <li>Fishing license. Purchase prior to meeting your guide!</li>
+          </ul>
+        </div>
+      </div>
     </section>
 
     <section id="gallery">
