--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <a href="#"><img src="images/logo-no-background-black.png" alt="Logo"><a href="index.html"></a>
       </div>
       <ul class="nav-links">
-          <li><a href="#">Home</a></li>
+          <li><a href="#">About</a></li>
           <li><a href="#territory">Territory</a></li>
           <li><a href="#pricing">Pricing</a></li>
           <li><a href="#gallery">Gallery</a></li>
@@ -46,15 +46,15 @@
       </div>
     </section>
 
-    <section id="about">
+    <section id="about"><div class="container">
       <h3>WHY CHOOSE US</h3>
       <div class="about-container">
         <img src="images/placeholder_fishing_catch.jpg" alt="Description of About Image"  width="500">
-        <p>At 3 Rivers Guide Service, we have lifetimes worth of experience traversing the waters and angling. With a variety of boats, our trips are conducted on what best fits the river/lake. Boat fishing offers the best way to cover the water and find the perfect spots!</p>
+        <p>Choosing 3 Rivers Guide Service for your next fishing adventure means partnering with seasoned experts in river navigation and angling. We know the waters, and that ensures a fishing experience that's both productive and enjoyable. With our variety of boats, each set up and chosen based on the specific river or lake, we guarantee an optimal fishing journey. Whether we're navigating the bends of a small river or tackling the big lakes, our boats are tailored to enhance your fishing experience, providing comfort, safety, and the best access to prime fishing spots.<br>Our lead guide, Wes, brings a wealth of knowledge and a lifetime of fishing expertise to each expedition. His intimate familiarity with the waters and his angling skills make him not just a guide, but a valuable fishing companion. With Wes at the helm, you'll benefit from insider tips on the best fishing techniques and locations, giving you the best chance at a rewarding catch and an enjoyable experience. Fishing with 3 Rivers Guide Service is more than just casting a line; it's about immersing yourself in the tranquility of nature, guided by experts who share your passion and commitment to the sport. Join us to experience the thrill of the catch and the peace of the great outdoors, all while learning from the best in the business.</p>
       </div>
-    </section>
+    </div></section>
 
-    <section id="territory">
+    <section id="territory"><div class="container">
       <h3>OUR TERRITORY</h3>
       <div class="territory-container">
         <ul>
@@ -70,9 +70,9 @@
         </ul>
         <img src="images/map.png" alt="issa map"  width="500"><img>
       </div>
-    </section>
+    </div></section>
 
-    <section id="pricing">
+    <section id="pricing"><div class="container">
       <h3>PRICING</h3>
       <div class="pricing-container">
         <div class="pricing-column">
@@ -102,7 +102,7 @@
           </ul>
         </div>
       </div>
-    </section>
+    </div></section>
 
     <section id="gallery">
       <div class="slideshow-container">
