About section work and font changes.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <link href="styles/main.css" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Germania+One&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Germania+One&family=Noto+Sans+Display:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
   
 <body>
@@ -50,7 +50,7 @@
       <h3>WHY CHOOSE US</h3>
       <div class="about-container">
         <img src="images/placeholder_fishing_catch.jpg" alt="Description of About Image"  width="500">
-        <p>Choosing 3 Rivers Guide Service for your next fishing adventure means partnering with seasoned experts in river navigation and angling. We know the waters, and that ensures a fishing experience that's both productive and enjoyable. With our variety of boats, each set up and chosen based on the specific river or lake, we guarantee an optimal fishing journey. Whether we're navigating the bends of a small river or tackling the big lakes, our boats are tailored to enhance your fishing experience, providing comfort, safety, and the best access to prime fishing spots.<br>Our lead guide, Wes, brings a wealth of knowledge and a lifetime of fishing expertise to each expedition. His intimate familiarity with the waters and his angling skills make him not just a guide, but a valuable fishing companion. With Wes at the helm, you'll benefit from insider tips on the best fishing techniques and locations, giving you the best chance at a rewarding catch and an enjoyable experience. Fishing with 3 Rivers Guide Service is more than just casting a line; it's about immersing yourself in the tranquility of nature, guided by experts who share your passion and commitment to the sport. Join us to experience the thrill of the catch and the peace of the great outdoors, all while learning from the best in the business.</p>
+        <p>Choosing 3 Rivers Guide Service for your next fishing adventure means partnering with seasoned experts in river navigation and angling. We know the waters, and that ensures both a productive and an enjoyable fishing experience. Our variety of boats are set up and chosen for each journey based on the specific river or lake we're tackling, so they're tailored to enhance your fishing experience and provide you with the best access to prime fishing spots.<br><br>Our lead guide, Wes, brings a lifetime of fishing knowledge and expertise to each expedition. His angling skills and familiarity with the waters make him not just a guide, but a valuable fishing companion. With Wes at the helm, you'll benefit from insider tips on the best fishing techniques and locations, giving you the best chance at a rewarding catch and an enjoyable experience. Fishing with 3 Rivers Guide Service is more than just casting a line; it's about immersing yourself in America's beautiful nature, guided by experts with a passion and commitment to the sport. Join us to experience the thrill of the catch and the peace of the great outdoors!</p>
       </div>
     </div></section>
 
