--- a/index.html
+++ b/index.html
@@ -76,12 +76,12 @@
       <h3>PRICING</h3>
       <div class="pricing-container">
         <div class="pricing-column">
-          <p>Packages:</p>
+          <p><b>Packages:</b></p>
           <ul>
             <li>Half-Day: $500</li>
             <li>Full-Day: $700</li>
           </ul>
-          <p>Deposit and Cancellation:</p>
+          <p><b>Deposit and Cancellation:</b></p>
           <ul>
             <li>1/2 trip cost will be due at booking. The second half is charged on the day of the trip before hitting the water.</li>
             <li>Deposits will not be refunded within 14 days of the trip.</li>
@@ -89,14 +89,14 @@
           </ul>
         </div>
         <div class="pricing-column">
-          <p>Includes:</p>
+          <p><b>Includes:</b></p>
           <ul>
             <li>Up to 3 people (Bigger groups accomodated, contact us for accurate pricing).</li>
             <li>Water, drinks, snacks.</li>
             <li>Lunch (Full-Day only, add to Half-Day for $20/person).</li>
             <li>Rods, reels, and tackle. Feel free to still bring your own!</li>
           </ul>
-          <p>Not Included:</p>
+          <p><b>Not Included:</b></p>
           <ul>
             <li>Fishing license. Purchase prior to meeting your guide!</li>
           </ul>
