--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <header>
          <nav class="navbar">
             <div class="logo">
-               <a href="#"><img src="images/logo-no-background-black.png" alt="Logo"></a>
+               <a href="#"><img src="images/logo-no-background-black.png" alt="3 Rivers Guide Service Logo"></a>
             </div>
             <ul class="nav-links">
                <li><a href="#">About</a></li>
@@ -46,7 +46,7 @@
             <div class="container">
                <h3>WHY CHOOSE US</h3>
                <div class="about-container">
-                  <img src="images/placeholder_fishing_catch.jpg" alt="Description of About Image"  width="500">
+                  <img src="images/catch.jpg" alt="Catching a fish!"  width="500">
                   <p>Choosing 3 Rivers Guide Service for your next fishing adventure means partnering with seasoned experts in river navigation and angling. We know the waters, and that ensures both a productive and an enjoyable fishing experience. Our variety of boats are set up and chosen for each journey based on the specific river or lake we're tackling, so they're tailored to enhance your fishing experience and provide you with the best access to prime fishing spots.<br><br>Our lead guide, Wes, brings a lifetime of fishing knowledge and expertise to each expedition. His angling skills and familiarity with the waters make him not just a guide, but a valuable fishing companion. With Wes at the helm, you'll benefit from insider tips on the best fishing techniques and locations, giving you the best chance at a rewarding catch and an enjoyable experience. Fishing with 3 Rivers Guide Service is more than just casting a line; it's about immersing yourself in America's beautiful nature, guided by experts with a passion and commitment to the sport. Join us to experience the thrill of the catch and the peace of the great outdoors!</p>
                </div>
             </div>
@@ -66,7 +66,7 @@
                      <li>Bull Shoals Lake</li>
                      <li>AND MORE!</li>
                   </ul>
-                  <img src="images/map.png" alt="issa map"  width="500">
+                  <img src="images/map.png" alt="Map of our territory."  width="500">
                </div>
             </div>
          </section>
@@ -107,19 +107,19 @@
             <div class="slideshow-container">
                <h3 class="fancy_h">See Some of Our Adventures</h3>
                <div class="mySlides fade">
-                  <img src="images/net.jpg" style="width:100%" alt="slideimg">
+                  <img src="images/net.jpg" style="width:100%" alt="Getting that fish with the net.">
                </div>
                <div class="mySlides fade">
-                  <img src="images/idaho.jpg" style="width:100%" alt="slideimg">
+                  <img src="images/idaho.jpg" style="width:100%" alt="River in Idaho.">
                </div>
                <div class="mySlides fade">
-                  <img src="images/colorado.jpg" style="width:100%" alt="slideimg">
+                  <img src="images/colorado.jpg" style="width:100%" alt="River in Colorado.">
                </div>
                <div class="mySlides fade">
-                  <img src="images/fish.jpeg" style="width:100%" alt="slideimg">
+                  <img src="images/fish.jpeg" style="width:100%" alt="Showing off a catch!">
                </div>
                <div class="mySlides fade">
-                  <img src="images/patagonia.jpg" style="width:100%" alt="slideimg">
+                  <img src="images/patagonia.jpg" style="width:100%" alt="Patagonia.">
                </div>
                <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
                <a class="next" onclick="plusSlides(1)">&#10095;</a>
