Fixed about anchor and scroll offset.

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                <a href="#"><img src="images/logo-no-background-black.png" alt="3 Rivers Guide Service Logo"></a>
             </div>
             <ul class="nav-links">
-               <li><a href="#">About</a></li>
+               <li><a href="#about">About</a></li>
                <li><a href="#territory">Territory</a></li>
                <li><a href="#pricing">Pricing</a></li>
                <li><a href="#gallery">Gallery</a></li>
